commit 117 - 리뷰 테이블 생성 (주문 테이블과 1:1) - 주문상태값에 따라 배달 상태값 변경 - 배달상태값에 따라 주문 상태값 변경 - (사용자입장) 배달 상태가 'DELIVERED'일 경우, 주소 변경 버튼 대신에 리뷰작성 버튼 생성

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -71,6 +71,9 @@
                     <li><a class="dropdown-item" href="/user/order">
                         <i data-feather="inbox" class="font-medium-2 ms-50"></i>&nbsp;&nbsp;&nbsp; 주문 및 배송정보</a>
                     </li>
+                    <li><a class="dropdown-item" href="/user/review">
+                        <i data-feather="edit-2" class="font-medium-2 ms-50"></i>&nbsp;&nbsp;&nbsp; 나의 리뷰</a>
+                    </li>
                 </ul>
             </div>
         </div>
