--- a/src/main/resources/templates/manager/deliver.html
+++ b/src/main/resources/templates/manager/deliver.html
@@ -66,6 +66,7 @@
                                     <option value="DELIVERING" th:selected="${deliver.deliverStatus eq 'DELIVERING'}">DELIVERING</option>
                                     <option value="DELIVERED" th:selected="${deliver.deliverStatus eq 'DELIVERED'}">DELIVERED</option>
                                     <option value="AWAIT" th:selected="${deliver.deliverStatus eq 'AWAIT'}">AWAIT</option>
+                                    <option value="CANCEL" th:selected="${deliver.deliverStatus eq 'CANCEL'}">CANCEL</option>
                                 </select>
                             </td>
                         </tr>
