--- a/src/main/resources/templates/bbs/faq/save.html
+++ b/src/main/resources/templates/bbs/faq/save.html
@@ -13,46 +13,49 @@
 
 <th:block layout:fragment="content">
     <div class="mt-3">
-        <div class="card-header" style="margin-bottom: 10px">
-            <div class="card-text d-flex justify-content-between">
-                <div class="text-start">
-                    <h3 th:text="|${type.postName}|"></h3>
-                </div>
-                <div class="text-end">
-                    <button type="button" class="btn btn-info" id="list-btn">목록</button>
-                    <button type="button" class="btn btn-secondary" id="save-btn">저장</button>
-                </div>
-            </div>
-        </div>
-        <div class="card-body">
-
-            <div class="mb-3 mt-3" style="margin-bottom: 10px;">
-                <label for="title">제목</label>
-                <input type="text" class="form-control" id="title" name="title"/>
-            </div>
-
-            <hr class="hr" />
-
-            <div class="mb-3 mt-3" style="margin-bottom: 10px;">
-                <label for="content">내용</label>
-                <div id="content" name="content" class="ckeditor" style="min-height: 300px"></div>
-            </div>
-
-            <hr class="hr" />
-
-            <div class="mb-3 mt-3">
-                <label for="file-container">파일첨부</label>
-                <input type="file" id="fileUpload" name="file" style="display:none"/>
-                <button class="btn btn-sm btn-primary" id="btn-upload">
-                    파일 추가
-                    <i data-feather="upload" class="font-medium-2 ms-50"></i>
-                </button>
-                <div class="file-container" id="file-container">
-                    <ul id="upload-container"></ul>
+        <form id="faq-form" class="needs-validation" novalidate>
+            <div class="card-header" style="margin-bottom: 10px">
+                <div class="card-text d-flex justify-content-between">
+                    <div class="text-start">
+                        <h3 th:text="|${type.postName}|"></h3>
+                    </div>
+                    <div class="text-end">
+                        <button type="button" class="btn btn-info" id="list-btn">목록</button>
+                        <button type="submit" class="btn btn-secondary" id="save-btn">저장</button>
+                    </div>
                 </div>
             </div>
+            <div class="card-body">
 
-        </div>
+                <div class="mb-3 mt-3" style="margin-bottom: 10px;">
+                    <label for="title">제목</label>
+                    <input type="text" class="form-control" id="title" name="title" required/>
+                    <div class="invalid-feedback">제목을 입력하세요.</div>
+                </div>
+
+                <hr class="hr" />
+
+                <div class="mb-3 mt-3" style="margin-bottom: 10px;">
+                    <label for="content">내용</label>
+                    <div id="content" name="content" class="ckeditor" style="min-height: 300px"></div>
+                </div>
+
+                <hr class="hr" />
+
+                <div class="mb-3 mt-3">
+                    <label for="file-container">파일첨부</label>
+                    <input type="file" id="fileUpload" name="file" style="display:none"/>
+                    <button class="btn btn-sm btn-primary" id="btn-upload">
+                        파일 추가
+                        <i data-feather="upload" class="font-medium-2 ms-50"></i>
+                    </button>
+                    <div class="file-container" id="file-container">
+                        <ul id="upload-container"></ul>
+                    </div>
+                </div>
+
+            </div>
+        </form>
     </div>
 </th:block>
 
@@ -72,34 +75,43 @@
                 }
             })
 
-            $("#save-btn").on("click", function(e){
-                if(ckEditor.getData().length === 0) alert("내용을 입력해주세요.")
-                else {
-                    const obj = {
-                        'title' : $("#title").val(),
-                        'content': ckEditor.getData(),
-                        'hongPostTypeId' : type['postTypeId'],
-                        'deleteFile': uploadFile.getDeleteFile()
-                    }
-
-                    if(uploadFile.getFileGroupId()) obj['fileGroupId'] = uploadFile.getFileGroupId()
-
-                    $.ajax({
-                        type: "POST",
-                        url: `/api/post`,
-                        data: JSON.stringify(obj),
-                        contentType: "application/json",
-                        success: function(response) {
-                            if(response.httpStatus === 200){
-                                alert("저장되었습니다.")
-                                window.location.href = `/bbs/${type['postTypeId']}`
+            window.addEventListener("load", function() {
+                const form = document.getElementById("faq-form")
+                form.addEventListener("submit", function(event) {
+                    if (form.checkValidity() === false) {
+                        event.preventDefault();
+                        form.classList.add("was-validated")
+                    } else {
+                        event.preventDefault();
+                        if(ckEditor.getData().length === 0) alert("내용을 입력해주세요.")
+                        else {
+                            const obj = {
+                                'title' : $("#title").val(),
+                                'content': ckEditor.getData(),
+                                'hongPostTypeId' : type['postTypeId'],
+                                'deleteFile': uploadFile.getDeleteFile()
                             }
-                        },
-                        error: function(error) {
-                            console.error("File upload error:", error);
+
+                            if(uploadFile.getFileGroupId()) obj['fileGroupId'] = uploadFile.getFileGroupId()
+
+                            $.ajax({
+                                type: "POST",
+                                url: `/api/post`,
+                                data: JSON.stringify(obj),
+                                contentType: "application/json",
+                                success: function(response) {
+                                    if(response.httpStatus === 200){
+                                        alert("저장되었습니다.")
+                                        window.location.href = `/bbs/${type['postTypeId']}`
+                                    }
+                                },
+                                error: function(error) {
+                                    console.error("File upload error:", error);
+                                }
+                            });
                         }
-                    });
-                }
+                    }
+                })
             })
 
             $('#btn-upload').on("click", function (e) {
