--- a/src/main/resources/templates/user/order.html
+++ b/src/main/resources/templates/user/order.html
@@ -158,7 +158,6 @@
 
         <!-- s: review write Modal -->
         <form id="review-write-form" class="needs-validation" novalidate>
-            <input type="hidden" id="hongOrderId" name="hongOrderId" />
             <div class="modal modal-lg fade" id="review-write-modal" tabindex="-1" aria-labelledby="reviewWriteModalLabel" data-bs-keyboard="false" aria-hidden="true" data-bs-backdrop="static" data-keyboard="false">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">
@@ -171,6 +170,13 @@
 
                         <div class="modal-body">
                             <div class="card-body">
+
+                                <div class="mb-3 mt-3">
+                                    <label style="margin-right: 10px;">상품선택</label>
+                                    <div id="choose-product-radio-div"></div>
+                                </div>
+
+                                <hr class="hr" />
 
                                 <div class="mb-3 mt-3" style="margin-bottom: 10px;">
                                     <label>리뷰별점</label>
@@ -187,6 +193,8 @@
                                         <label for="reviewStar1" title="text">1 star</label>
                                     </div>
                                 </div>
+
+                                <hr class="hr" />
 
                                 <div class="mb-3 mt-3" style="margin-bottom: 10px;">
                                     <label for="reviewContent">내용</label>
@@ -268,7 +276,7 @@
                     success: function (data) {
                         if(!data.message) alert("이미 작성된 리뷰가 있습니다.")
                         else {
-                            $("#hongOrderId").val(orderId)
+                            setRadioDiv(orderId)                    // 주문 -> 상품건들에 대한 라디오 버튼 div 만들기
                             $("#review-write-modal").modal('show')
                         }
                     },
@@ -286,12 +294,46 @@
             }
         })
 
+        /* 리뷰 작성폼 -> 주문상품 건 라디오 버튼 div 만들기
+        *  > 이때 이미 리뷰가 작성된 상품건에 대해선 선택 불가
+        * */
+        function setRadioDiv(orderId){
+            const dom = $("#choose-product-radio-div")
+            dom.empty()
+
+            $.ajax({
+                type: 'GET',
+                url: `/api/order-review/${orderId}`,
+                dataType: 'json',
+                contentType: 'application/json',
+                success: function (data) {
+                    if(data.httpStatus === 200) {
+                        const datas = data.message
+
+                        datas.forEach((data, i) => {
+                            const disableOrNot = (data['reviewChkEmpty']) ? '' : 'disabled'
+                            const body = `<div class="form-check">
+                                            <input class="form-check-input" type="radio" name="hongOrderDetailId" value="${data['orderDetailId']}" id="orderDetailId-${data['orderDetailId']}" ${disableOrNot} required>
+                                            <label class="form-check-label" for="orderDetailId-${data['orderDetailId']}">
+                                               ${data['productName']}
+                                            </label>
+                                        </div>`
+
+                            dom.append(body)
+                        })
+                    }
+                },
+                error: function (xhr, status, error) {
+                    console.error('Error getting password:', error);
+                }
+            });
+        }
+
         /* 리뷰작성 모달창 닫기 */
         $("#close-reviewWriteModal, #close-review-write-modal-btn").on("click", function(e) {
             const result = confirm("작성중인 리뷰는 저장되지 않습니다." + '\n' + "리뷰작성을 취소하시겠습니까?")
             if(result) {
                 uploadFile.domEmptyAndFileGroupIdNull();
-                $("#reviewStar").val("");
                 ckEditor.setData("");
 
                 const form = document.getElementById("review-write-form")
