--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" type="text/css" th:href="@{'/assets/css/bootstrap/bootstrap.min.css'}">
     <link rel="stylesheet" type="text/css" th:href="@{'/assets/css/bootstrap/bootstrap.css'}">
     <link rel="stylesheet" type="text/css" th:href="@{'/assets/css/category/category.shop.css'}">
+    <link rel="stylesheet" type="text/css" th:href="@{'/assets/css/user/user.order.css'}">
+    <link rel="stylesheet" type="text/css" th:href="@{'/assets/css/user/user.review.css'}">
     <link rel="stylesheet" type="text/css" th:href="@{'/assets/css/error/error.css'}">
     <link rel="shortcut icon" type="image/x-icon" th:href="@{'/assets/src/favicon/favicon.ico'}" />
 
