--- a/src/main/resources/templates/user/review.html
+++ b/src/main/resources/templates/user/review.html
@@ -5,79 +5,7 @@
 
 <th:block layout:fragment="head">
   <title>HONG SHOP</title>
-    <style>
-        .card-list {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 20px;
-            justify-content: center;
-            margin: 20px;
-        }
-
-        .card {
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            width: 100%;
-            display: flex;
-            flex-direction: column;
-        }
-
-        .card-header {
-            display: flex;
-            align-items: center;
-            padding: 20px;
-        }
-
-        .card-header img {
-            border-radius: 4px;
-            margin-right: 20px;
-            width: 100px;
-            height: 100px;
-        }
-
-        .header-content h3 {
-            font-size: 18px;
-            margin-bottom: 10px;
-        }
-
-        .header-content p {
-            font-size: 14px;
-            color: #555;
-        }
-
-        .image-container {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 10px;
-            padding: 20px;
-        }
-
-        .image-container img {
-            border-radius: 4px;
-            height: 150px;
-            width: 150px;
-        }
-
-        .card-content {
-            padding: 20px;
-        }
-
-        .card-content h3 {
-            font-size: 18px;
-            margin-bottom: 10px;
-        }
-
-        .card-content p {
-            font-size: 14px;
-            color: #555;
-        }
-
-        .fa-star.checked {
-            color: orange;
-        }
-    </style>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> <!-- 리뷰 별점 view css -->
 </th:block>
 
 <th:block layout:fragment="content">
@@ -91,108 +19,118 @@
             </div>
         </div>
         <div class="card-body">
+
             <div class="card-list">
-
-                <div class="card">
+                <div class="card" th:each="review, reviewStat : ${reviews}">
                     <div class="card-header">
-                        <img src="/assets/src/shop/noImage.png" alt="Card Image 1">
+                        <img th:src="${(review.getHongOrderDetailVO().getFile() != null and review.getHongOrderDetailVO().getFile().getFileList().size() >= 1) ? '/image?imageId=' + review.getHongOrderDetailVO().getFile().getFileList().get(0).getSavedFileName() : '/assets/src/shop/noImage.png'}" alt="Card Image 1">
                         <div class="header-content">
-                            <h3>Product Image</h3>
-                            <p>Image Description 1</p>
+                            <h3 th:text="${review.getHongOrderDetailVO().getProductName()}"></h3>
+                            <p th:text="|주문가격: ${#numbers.formatInteger(review.getHongOrderDetailVO().getOrderPrice(), 0, 'COMMA')} 원|"></p>
+                            <p th:text="|주문개수: ${review.getHongOrderDetailVO().getOrderCnt()} 개|"></p>
                         </div>
                     </div>
-                    <div class="image-container">
-                        <img src="/assets/src/shop/noImage.png" alt="Card Image 1">
-                        <img src="/assets/src/shop/noImage.png" alt="Card Image 2">
-                    </div>
-                    <div class="card-content">
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star"></span>
-                        <span class="fa fa-star"></span>
-                        <h3>Card Title 1</h3>
-                        <p>This is a description for card 1.</p>
-                    </div>
-                </div>
 
-                <div class="card">
-                    <div class="card-header">
-                        <img src="/assets/src/shop/noImage.png" alt="Card Image 1">
-                        <div class="header-content">
-                            <h3>Image Name 1</h3>
-                            <p>Image Description 1</p>
+                    <div class="image-container">
+                        <th:block th:if="${review.getFile() != null and review.getFile().getFileList().size() >= 1}">
+                            <th:block th:each="fileLst, fileLstStat : ${review.getFile().getFileList()}">
+                                <img th:src="${'/image?imageId=' + fileLst.getSavedFileName()}" />
+                            </th:block>
+                        </th:block>
+                        <th:block th:unless="${review.getFile() != null and review.getFile().getFileList().size() >= 1}">
+                            <img src="/assets/src/shop/noImage.png" alt="Card Image 1">
+                        </th:block>
+                    </div>
+
+                    <div class="card-content">
+                        <div style="margin-bottom: 10px;">
+                            <h3>별점</h3>
+                            <th:block th:each="m : ${#numbers.sequence(1,5)}">
+                                <span th:class="${m <= review.getReviewStar()} ? 'fa fa-star checked' : 'fa fa-star'"></span>
+                            </th:block>
                         </div>
-                    </div>
-                    <div class="image-container">
-                        <img src="/assets/src/shop/noImage.png" alt="Card Image 1">
-                        <img src="/assets/src/shop/noImage.png" alt="Card Image 2">
-                    </div>
-                    <div class="card-content">
-                        <h3>Card Title 1</h3>
-                        <p>This is a description for card 1.</p>
-                    </div>
-                </div>
 
-                <div class="card">
-                    <div class="card-header">
-                        <img src="/assets/src/shop/noImage.png" alt="Card Image 1">
-                        <div class="header-content">
-                            <h3>Image Name 1</h3>
-                            <p>Image Description 1</p>
+                        <div class="card-text d-flex justify-content-between">
+                            <div class="text-start">
+                                <h3>리뷰내용</h3>
+                            </div>
+                            <div class="text-end">
+                                <a href="#" th:onclick="'editReview(\'' + ${review.getReviewId()} + '\')'">
+                                    <i data-feather="edit" class="front-medium-2"></i>
+                                </a>
+                                <a href="#" th:onclick="'trashReview(\'' + ${review.getReviewId()} + '\')'">
+                                    <i data-feather="trash" class="front-medium-2"></i>
+                                </a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="image-container">
-                        <img src="/assets/src/shop/noImage.png" alt="Card Image 1">
-                        <img src="/assets/src/shop/noImage.png" alt="Card Image 2">
-                    </div>
-                    <div class="card-content">
-                        <h3>Card Title 1</h3>
-                        <p>This is a description for card 1.</p>
+                        <textarea class="form-control" id="reviewContent" name="reviewContent" th:utext="${review.getReviewContet()}" readonly></textarea>
+
                     </div>
                 </div>
-
-
-                <div class="card">
-                    <div class="card-header">
-                        <img src="/assets/src/shop/noImage.png" alt="Card Image 1">
-                        <div class="header-content">
-                            <h3>Image Name 1</h3>
-                            <p>Image Description 1</p>
-                        </div>
-                    </div>
-                    <div class="image-container">
-                        <img src="/assets/src/shop/noImage.png" alt="Card Image 1">
-                        <img src="/assets/src/shop/noImage.png" alt="Card Image 2">
-                    </div>
-                    <div class="card-content">
-                        <h3>Card Title 1</h3>
-                        <p>This is a description for card 1.</p>
-                    </div>
-                </div>
-
-
-                <div class="card">
-                    <div class="card-header">
-                        <img src="/assets/src/shop/noImage.png" alt="Card Image 1">
-                        <div class="header-content">
-                            <h3>Image Name 1</h3>
-                            <p>Image Description 1</p>
-                        </div>
-                    </div>
-                    <div class="image-container">
-                        <img src="/assets/src/shop/noImage.png" alt="Card Image 1">
-                        <img src="/assets/src/shop/noImage.png" alt="Card Image 2">
-                    </div>
-                    <div class="card-content">
-                        <h3>Card Title 1</h3>
-                        <p>This is a description for card 1.</p>
-                    </div>
-                </div>
-
-                <!-- Add more cards as needed -->
             </div>
+
         </div>
+
+        <!-- s: review update Modal -->
+        <form id="review-update-form" class="needs-validation" novalidate>
+            <div class="modal modal-lg fade" id="review-update-modal" tabindex="-1" aria-labelledby="reviewUpdateModalLabel" data-bs-keyboard="false" aria-hidden="true" data-bs-backdrop="static" data-keyboard="false">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+
+                        <!-- Modal Header -->
+                        <div class="modal-header">
+                            <h4 class="modal-title">리뷰 수정하기</h4>
+                            <button type="button" class="btn-close" id="close-review-update-modal-btn"></button>
+                        </div>
+
+                        <div class="modal-body">
+                            <div class="card-body">
+
+                                <div class="mb-3 mt-3">
+                                    <label style="margin-right: 10px;">상품이름</label>
+                                    <h5 id="productName" style="font-weight: bold"></h5>
+                                </div>
+
+                                <hr class="hr" />
+
+                                <div class="mb-3 mt-3" style="margin-bottom: 10px;">
+                                    <label>리뷰별점</label>
+                                    <div class="rate" id="review-rate-div"></div>
+                                </div>
+
+                                <hr class="hr" />
+
+                                <div class="mb-3 mt-3" style="margin-bottom: 10px;">
+                                    <label for="reviewContent">내용</label>
+                                    <textarea class="form-control" id="update-reviewContent" name="reviewContent" style="height: 200px;" required></textarea>
+                                    <div class="invalid-feedback">리뷰 내용을 입력해주세요.</div>
+                                </div>
+
+                                <hr class="hr" />
+
+                                <div class="mb-3 mt-3">
+                                    <label for="file-container">파일첨부</label>
+                                    <input type="file" id="fileUpload" name="file" style="display:none"/>
+                                    <button class="btn btn-sm btn-primary" id="btn-upload">
+                                        파일 추가
+                                        <i data-feather="upload" class="font-medium-2 ms-50"></i>
+                                    </button>
+                                    <div class="file-container" id="file-container">
+                                        <ul id="upload-container"></ul>
+                                    </div>
+                                </div>
+
+                                <div style="margin-top: 10px" class="text-end">
+                                    <button type="button" class="btn btn-outline-secondary" id="close-reviewUpdateModal">닫기</button>
+                                    <button type="submit" class="btn btn-outline-primary" id="update-review">저장</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
+        <!-- s: review update Modal -->
     </div>
 </th:block>
 
@@ -200,9 +138,163 @@
 <th:block layout:fragment="script">
   <script th:inline="javascript">
     const reviews = /*[[${reviews}]]*/ [];
-    console.log("reviews : ", reviews)
+    const uploadFile = new File("upload-container")
+    let reviewId = null
 
+    $(document).ready(function(e) {
+        feather.replace()
+    })
 
+    /* 리뷰 수정 버튼 이벤트 */
+    function editReview(id) {
+        $.ajax({
+            type: 'GET',
+            url: `/api/review/${id}`,
+            dataType: 'json',
+            success: function (data) {
+                if(data.httpStatus === 200) {
+                    setReviewModal(data.message)
+                }
+            },
+            error: function (xhr, status, error) {
+                console.error('Error getting password:', error);
+            }
+        });
+    }
+
+    /* 리뷰 삭제 버튼 이벤트 */
+    function trashReview(id){
+        const result = confirm("해당 리뷰를 삭제하시겠습니까?")
+        if(result) {
+            $.ajax({
+                type: 'DELETE',
+                url: `/api/review/${id}`,
+                dataType: 'json',
+                contentType: 'application/json',
+                success: function (data) {
+                    if(data.httpStatus === 200) {
+                        alert(`${data.message}`)
+                        window.location.href = `/user/review`
+                    }else {
+                        alert("해당 리뷰 삭제에 실패했습니다.")
+                    }
+                },
+                error: function (xhr, status, error) {
+                    console.error('Error getting password:', error);
+                }
+            });
+        }
+    }
+
+    /* 리뷰수정 버튼 이벤트 클릭 -> 리뷰 수정 모달 데이터로 채우기 */
+    function setReviewModal(data){
+        reviewId = data['reviewId']                                             // 리뷰 id
+
+        if(data['file']) {                                                      // file-container
+            uploadFile.setFileGroupId(data['file'].id)
+            uploadFile.setData(data['file']['fileList']).setFiles()
+        }
+
+        $("#productName").text(data['hongOrderDetailVO']['productName'])        // 주문 상품 이름
+        $("#update-reviewContent").val(data['reviewContet'])                    // 리뷰 내용
+
+        // review-rate-div
+        const dom = $("#review-rate-div")
+        dom.empty()
+
+        let body = '';
+        for(let i=5; i>=1; i--) {
+            const checkedOrNot = (data['reviewStar'] == i) ? 'checked' : ''
+            body += `<input type="radio" id="reviewStar${i}" name="reviewStar" value="${i}" ${checkedOrNot}/>
+                     <label for="reviewStar${i}" title="text">${i} stars</label>`
+        }
+
+        dom.append(body)
+        $("#review-update-modal").modal('show')
+    }
+
+    /* 리뷰 수정 모달 닫기 이벤트 -> 폼 validation 제거 , 파일 컨테이너 초기화 , 리뷰 내용 초기화 */
+    $("#close-review-update-modal-btn, #close-reviewUpdateModal").on('click', function(e){
+        const result = confirm("작성중인 리뷰는 저장되지 않습니다." + '\n' + "리뷰작성을 취소하시겠습니까?")
+        if(result) {
+            uploadFile.domEmptyAndFileGroupIdNull();
+            $("#update-reviewContent").val('')
+
+            const form = document.getElementById("review-update-form")
+            form.classList.remove("was-validated")      // validation 지우기
+
+            $("#review-update-modal").modal('hide')
+        }
+    })
+
+    /* 리뷰 수정하기 form */
+    window.addEventListener("load", function() {
+        const form = document.getElementById("review-update-form")
+        form.addEventListener("submit", function(event) {
+            if (form.checkValidity() === false) {
+                event.preventDefault();
+                form.classList.add("was-validated")
+            } else {
+                event.preventDefault();
+
+                FormDataToObj.getParameter("review-update-form").then((obj) => {
+                    obj['deleteFile'] = uploadFile.getDeleteFile();
+                    if(uploadFile.getFileGroupId()) obj['fileGroupId'] = uploadFile.getFileGroupId()
+
+                    $.ajax({
+                        type: 'PUT',
+                        url: `/api/review/${reviewId}`,
+                        dataType: 'json',
+                        data: JSON.stringify(obj),
+                        contentType: 'application/json',
+                        success: function (data) {
+                            if (data.httpStatus === 200) {
+                                alert(`${data.message}`)
+                                window.location.href = '/user/review'
+                            } else {
+                                alert("해당 리뷰 수정에 실패했습니다.")
+                            }
+                        },
+                        error: function (xhr, status, error) {
+                            console.error('Error getting password:', error);
+                        }
+                    });
+                })
+            }
+        })
+    })
+
+    $('#btn-upload').on("click", function (e) {
+        e.preventDefault();
+        $('#fileUpload').click();
+    });
+
+    $("#fileUpload").on("change", function (e) {
+        const selectedFile = e.target.files[0];
+        const fileName = selectedFile.name
+
+        const formData = new FormData();
+        formData.append("file", selectedFile);
+        if(uploadFile.getFileGroupId()) formData.append("fileGroupId", uploadFile.getFileGroupId());
+
+        $.ajax({
+            type: "POST",
+            url: "/api/uploadFile",
+            data: formData,
+            contentType: false,
+            processData: false,
+            success: function(response) {
+                if(response.httpStatus === 200) {
+                    uploadFile.setFileGroupId(response.message.fileGroupId)
+                    uploadFile.addFileList({'originalFileName': fileName, 'id': response.message.id})
+                }
+            },
+            error: function(error) {
+                // Handle the error response
+                console.error("File upload error:", error);
+            }
+        });
+    });
 
   </script>
 </th:block>
