--- a/src/main/resources/templates/user/review.html
+++ b/src/main/resources/templates/user/review.html
@@ -20,7 +20,16 @@
         </div>
         <div class="card-body">
 
-            <div class="card-list">
+            <!-- s: empty card -->
+            <div class="card" id="empty-div" th:if="${reviews.size() == 0}" style="margin-top: 40px">
+                <div class="card-body" style="text-align: center">
+                    <h4>리뷰가 비어있습니다.</h4>
+                </div>
+            </div>
+            <!-- e: empty card -->
+
+            <!-- s: card list -->
+            <div class="card-list" th:unless="${reviews.size() == 0}" style="margin-top: 40px">
                 <div class="card" th:each="review, reviewStat : ${reviews}">
                     <div class="card-header">
                         <img th:src="${(review.getHongOrderDetailVO().getFile() != null and review.getHongOrderDetailVO().getFile().getFileList().size() >= 1) ? '/image?imageId=' + review.getHongOrderDetailVO().getFile().getFileList().get(0).getSavedFileName() : '/assets/src/shop/noImage.png'}" alt="Card Image 1">
@@ -68,7 +77,7 @@
                     </div>
                 </div>
             </div>
-
+            <!-- e: card list -->
         </div>
 
         <!-- s: review update Modal -->
